<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/outputSelection"
    android:paddingTop="@dimen/dialog_padding"
    android:paddingLeft="@dimen/dialog_padding"
    android:paddingRight="@dimen/dialog_padding">

    <TextView
        android:layout_width="match_parent"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sound_output_layout"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="@dimen/mini_fab_size"
                    android:layout_height="@dimen/mini_fab_size"
...
