<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="inputoutput.IOActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_io" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/morse_input_fab"
        android:layout_width="@dimen/morse_input_fab_size"
        android:layout_height="@dimen/morse_input_fab_size"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_access_point_white_48dp"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>
