...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/morse_input_text_container"
    android:visibility="visible"
    android:background="@android:color/white"
    android:onClick="onFocusTextInput"
    tools:context="inputoutput.IOActivity">

    <EditText
...
